--- a/.eslintrc
+++ b/.eslintrc
@@ -19,7 +19,8 @@
   },
   "plugins": ["react", "@typescript-eslint", "import", "jsx-a11y", "react-hooks", "prettier"],
   "rules": {
-    // "@typescript-eslint/no-explicit-any": "off",
+    "no-console": "warn",
+    /* eslint no-console: ["error", { allow: ["warn", "error"] }] */
     "@typescript-eslint/no-non-null-assertion": "off",
     "@typescript-eslint/no-unused-vars": [
       "warn",
