--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@types/react-test-renderer": "^18.0.0",
     "@vitest/ui": "^0.33.0",
+    "gh-pages": "^5.0.0",
     "konva": "^9.2.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
